--- a/client/zentro-frontend/tsconfig.json
+++ b/client/zentro-frontend/tsconfig.json
@@ -5,6 +5,8 @@
     "baseUrl": ".",
     "paths": {
       "~/*": ["src/*"]
-    }
+    },
+    "noUnusedLocals": false,
+    "noUnusedParameters": false
   }
 }
